--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="active" href="#contact">BLOG</a>
                     <a class="active" href="#about">ACCOUNT</a>
                     <a class="active" href="#about">VIEW PLANS</a>
-                    <img src="./content/images/bg-pattern-mobile-nav.svg" alt="mobile-nav-svg">  <!--mobile nav svg-->
+                    <img class="mbl-nav-svg" src="./content/images/bg-pattern-mobile-nav.svg" alt="mobile-nav-svg">  <!--mobile nav svg-->
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
