--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script>   //navbar-toggle-button-js
         function myFunction() {
           var x = document.getElementById("myLinks");
-          if (x.style.display === "grid") {
+          if (x.style.display === "none") {
             x.style.display = "none";
           } else {
             x.style.display = "grid";
