--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./style.css">      <!--main css link-->
-        <!--boostrap css link cdn-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">   
         <!--font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
         <!--google font link-->
@@ -37,10 +35,22 @@
                 </a>
             </nav>    
         </section>
+        <section id="welcome-section">                <!--welcome section-->
+            <div class="wel-main">                    <!--welcome main-->
+                <img class="intro-img" src="./content/images/image-intro-mobile.jpg" alt="intro">     <!--intro image-->
+                <div class="intro-main">                                                              <!--intro main-->
+                    <h1 class="intro-heading">                                                        <!--intro heading-->
+                        Humanizing <br> your insurance.
+                    </h1>                    
+                    <p class="intro-text">                                                            <!--intro random text-->
+                        Get your life insurance coverage easier and <br> faster. We blend our expertise and <br> technology to help you find the plan that’s <br> right for you. Ensure you and your loved <br> ones are protected.
+                    </p>
+                    <a href="#view-plans" class="intro-link">VIEW PLANS</a>                           <!--intro link-->     
+                </div>
+                <img class="bg-ptrn-intro-right" src="./content/images/bg-pattern-intro-right-mobile.svg" alt="bg-pattern-intro-right-mobile">   <!--intro bg pattren right-->
+            </div>
+        </section>
     </div>
-       <!--boostrap javascript cdn link popper-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-     
     <script>   //navbar-toggle-button-js
         function myFunction() {
           var x = document.getElementById("myLinks");
