--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="./style.css">      <!--main css link-->
         <!--font awesome cdn link-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" >  
         <!--google font link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,11 +43,22 @@
                         Humanizing <br> your insurance.
                     </h1>                    
                     <p class="intro-text">                                                            <!--intro random text-->
-                        Get your life insurance coverage easier and <br> faster. We blend our expertise and <br> technology to help you find the plan that’s <br> right for you. Ensure you and your loved <br> ones are protected.
+                        Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.
                     </p>
                     <a href="#view-plans" class="intro-link">VIEW PLANS</a>                           <!--intro link-->     
                 </div>
                 <img class="bg-ptrn-intro-right" src="./content/images/bg-pattern-intro-right-mobile.svg" alt="bg-pattern-intro-right-mobile">   <!--intro bg pattren right-->
+            </div>
+        </section>
+        <section id="feachers">                       <!--features section-->
+            <div class="main-feature">                <!--features main-->
+                <hr class="hr">
+                <h1 class="feature-heading">We’re different</h1>       <!--features heading-->
+                <div class="card-1">                                   <!--features card 1-->
+                    <img class="card-icon" src="./content/images/icon-snappy-process.svg" alt="icon-snappy-process">
+                    <h3 class="card-heading">Snappy Process</h3>
+                    <p class="card-text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+                </div>
             </div>
         </section>
     </div>
