--- a/index.html
+++ b/index.html
@@ -53,12 +53,41 @@
         <section id="feachers">                       <!--features section-->
             <div class="main-feature">                <!--features main-->
                 <hr class="hr">
-                <h1 class="feature-heading">We’re different</h1>       <!--features heading-->
-                <div class="card-1">                                   <!--features card 1-->
+                <h1 class="feature-heading">We’re different</h1>     <!--features heading-->
+                <div class="card">                                   <!--features card 1-->
                     <img class="card-icon" src="./content/images/icon-snappy-process.svg" alt="icon-snappy-process">
                     <h3 class="card-heading">Snappy Process</h3>
                     <p class="card-text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
                 </div>
+                <div class="card">                                   <!--features card 2-->
+                    <img class="card-icon" src="./content/images/icon-affordable-prices.svg" alt="icon-snappy-process">
+                    <h3 class="card-heading">Affordable Prices</h3>
+                    <p class="card-text">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+                </div>
+                <div class="card">                                   <!--features card 3-->
+                    <img class="card-icon" src="./content/images/icon-people-first.svg" alt="icon-snappy-process">
+                    <h3 class="card-heading">People First</h3>
+                    <p class="card-text">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+                </div>
+            </div>
+        </section>
+        <section id="how-we-work">                    <!--how we work section-->
+            <div class="main-hww">                    <!--how we work main-->
+                <div class="how-we-work-bg">
+                    <h1 class="hww-heading">Find out more about how we work</h1>      <!--how we work heading-->
+                    <a href="#how-we-work" class="hww-link">HOW WE WORK</a>           <!--how we work link-->
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="main-contact">
+                <img src="./content/images/logo.svg" alt="brand logo" class="brand-logo">
+                <div class="contact-logo-main">
+                    <a href="" class="contact-logo-link"><img src="./content/images/icon-facebook.svg" alt="logo" class="contact-logo"></a>
+                    <a href="" class="contact-logo-link"><img src="./content/images/icon-twitter.svg" alt="logo" class="contact-logo"></a>
+                    <a href="" class="contact-logo-link"><img src="./content/images/icon-pinterest.svg" alt="logo" class="contact-logo"></a>
+                    <a href="" class="contact-logo-link"><img src="./content/images/icon-instagram.svg" alt="logo" class="contact-logo"></a>
+                </div> 
             </div>
         </section>
     </div>
