complete mobile view

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./style.css">      <!--main css link-->
         <!--font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" >  
         <!--google font link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&family=Grandstander:wght@700&family=Koulen&family=Luckiest+Guy&family=Mochiy+Pop+P+One&family=Permanent+Marker&family=Roboto+Flex:opsz,wght@8..144,500&family=Syne+Mono&family=Titan+One&display=swap" rel="stylesheet">
-        <!--animate.style cdn link-->
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
+    <link rel="stylesheet" href="./style.css">      <!--main css link-->
+    <link rel="icon" type="image/x-icon" href="./content/images/favicon-32x32.png">   <!--tittle fevicon-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,15 +78,38 @@
                 </div>
             </div>
         </section>
-        <section id="contact">
-            <div class="main-contact">
-                <img src="./content/images/logo.svg" alt="brand logo" class="brand-logo">
-                <div class="contact-logo-main">
-                    <a href="" class="contact-logo-link"><img src="./content/images/icon-facebook.svg" alt="logo" class="contact-logo"></a>
-                    <a href="" class="contact-logo-link"><img src="./content/images/icon-twitter.svg" alt="logo" class="contact-logo"></a>
-                    <a href="" class="contact-logo-link"><img src="./content/images/icon-pinterest.svg" alt="logo" class="contact-logo"></a>
-                    <a href="" class="contact-logo-link"><img src="./content/images/icon-instagram.svg" alt="logo" class="contact-logo"></a>
+        <section id="contact">                        <!--contact section-->
+            <div class="main-contact">                <!--contact section main-->
+                <img src="./content/images/logo.svg" alt="brand logo" class="brand-logo">       <!--contact section brand logo-->
+                <div class="contact-icon-main">                                                 <!--contact section contact icon-->
+                    <a href="" class="contact-icon-link"><img src="./content/images/icon-facebook.svg" alt="icon" class="contact-icon"></a>
+                    <a href="" class="contact-icon-link"><img src="./content/images/icon-twitter.svg" alt="icon" class="contact-icon"></a>
+                    <a href="" class="contact-icon-link"><img src="./content/images/icon-pinterest.svg" alt="icon" class="contact-icon"></a>
+                    <a href="" class="contact-icon-link"><img src="./content/images/icon-instagram.svg" alt="icon" class="contact-icon"></a>
                 </div> 
+            </div>
+        </section>
+        <section id="footer">                         <!--footer section-->
+            <div class="footer-main">                 <!--footer section main-->
+                <hr class="footer-hr">
+                <a href="#Our-company" class="footer-link-1">OUR COMPANY</a>       <!--footer link-->
+                <a href="#how-we-work" class="footer-link-2">HOW WE WORK</a>
+                <a href="#Why-Insure?" class="footer-link-2">WHY INSURE?</a>
+                <a href="#check-price" class="footer-link-2">CHECK PRICE</a>
+                <a href="#Reviews" class="footer-link-2">REVIEWS</a>
+                <a href="#help-me" class="footer-link-1">HELP ME</a>
+                <a href="#faq" class="footer-link-2">FAQ</a>
+                <a href="#terms-of-use" class="footer-link-2">TERMS OF USE</a>
+                <a href="#privacy-policy" class="footer-link-2">PRIVACY POLICY</a>
+                <a href="#cookies" class="footer-link-2">COOKIES</a>
+                <a href="#contact" class="footer-link-1">CONTACT</a>
+                <a href="#sales" class="footer-link-2">SALES</a>
+                <a href="#support" class="footer-link-2">SUPPORT</a>
+                <a href="#live-chat" class="footer-link-2">LIVE CHAT</a>
+                <a href="#others" class="footer-link-1">OTHERS</a>
+                <a href="#careers" class="footer-link-2">CAREERS</a>
+                <a href="#press" class="footer-link-2">PRESS</a>
+                <a href="#licenses" class="footer-link-2">LICENSES</a>
             </div>
         </section>
     </div>
