final mobile view

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
                     <img class="logo" src="./content/images/logo.svg" alt="brand-logo">    
                 </a>
                 <div id="myLinks">                    <!--nav links-->
-                    <a class="active" href="#news">HOW WE WORK</a>
-                    <a class="active" href="#contact">BLOG</a>
-                    <a class="active" href="#about">ACCOUNT</a>
-                    <a class="active" href="#about">VIEW PLANS</a>
-                    <img class="mbl-nav-svg" src="./content/images/bg-pattern-mobile-nav.svg" alt="mobile-nav-svg">  <!--mobile nav svg-->
+                    <a class="active" href="#how-we-work">HOW WE WORK</a>
+                    <a class="active" href="#blog">BLOG</a>
+                    <a class="active" href="#account">ACCOUNT</a>
+                    <a class="active" href="#view-plans">VIEW PLANS</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
@@ -82,10 +81,10 @@
             <div class="main-contact">                <!--contact section main-->
                 <img src="./content/images/logo.svg" alt="brand logo" class="brand-logo">       <!--contact section brand logo-->
                 <div class="contact-icon-main">                                                 <!--contact section contact icon-->
-                    <a href="" class="contact-icon-link"><img src="./content/images/icon-facebook.svg" alt="icon" class="contact-icon"></a>
-                    <a href="" class="contact-icon-link"><img src="./content/images/icon-twitter.svg" alt="icon" class="contact-icon"></a>
-                    <a href="" class="contact-icon-link"><img src="./content/images/icon-pinterest.svg" alt="icon" class="contact-icon"></a>
-                    <a href="" class="contact-icon-link"><img src="./content/images/icon-instagram.svg" alt="icon" class="contact-icon"></a>
+                    <a href="#facebook" class="contact-icon-link"><img src="./content/images/icon-facebook.svg" alt="icon" class="contact-icon"></a>
+                    <a href="#twitter" class="contact-icon-link"><img src="./content/images/icon-twitter.svg" alt="icon" class="contact-icon"></a>
+                    <a href="#pinterest" class="contact-icon-link"><img src="./content/images/icon-pinterest.svg" alt="icon" class="contact-icon"></a>
+                    <a href="#instagram" class="contact-icon-link"><img src="./content/images/icon-instagram.svg" alt="icon" class="contact-icon"></a>
                 </div> 
             </div>
         </section>
