initial welcome page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         </section>
         <section id="welcome-section">                <!--welcome section-->
             <div class="wel-main">                    <!--welcome main-->
-                <img class="intro-img" src="./content/images/image-intro-mobile.jpg" alt="intro">     <!--intro image-->
-                <div class="intro-main">                                                              <!--intro main-->
+                <img class="intro-img-mobile" src="./content/images/image-intro-mobile.jpg" alt="intro">     <!--intro image mobile-->
+                <img class="intro-img-laptop" src="./content/images/image-intro-desktop.jpg" alt="intro">     <!--intro image laptop-->
+                <div class="intro-main">
+                    <hr class="hr-wel">                                                              <!--intro main-->
                     <h1 class="intro-heading">                                                        <!--intro heading-->
                         Humanizing <br> your insurance.
                     </h1>                    
