--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <img class="intro-img-mobile" src="./content/images/image-intro-mobile.jpg" alt="intro">     <!--intro image mobile-->
                 <img class="intro-img-laptop" src="./content/images/image-intro-desktop.jpg" alt="intro">     <!--intro image laptop-->
                 <div class="intro-main">
+                    <img src="./content/images/bg-pattern-intro-left-mobile.svg" alt="bg-ptrn-intro-left" class="bg-ptrn-intro-left">                <!--intro bg pattren left-->
                     <hr class="hr-wel">                                                              <!--intro main-->
                     <h1 class="intro-heading">                                                        <!--intro heading-->
                         Humanizing <br> your insurance.
