--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <img class="intro-img-mobile" src="./content/images/image-intro-mobile.jpg" alt="intro">     <!--intro image mobile-->
                 <img class="intro-img-laptop" src="./content/images/image-intro-desktop.jpg" alt="intro">     <!--intro image laptop-->
                 <div class="intro-main">
-                    <img src="./content/images/bg-pattern-intro-left-mobile.svg" alt="bg-ptrn-intro-left" class="bg-ptrn-intro-left">                <!--intro bg pattren left-->
+                    <img src="./content/images/bg-pattern-intro-left-mobile.svg" alt="bg-ptrn-intro-left" class="bg-ptrn-intro-left">                               <!--intro bg pattren left-->
+                    <img src="./content/images/bg-pattern-intro-right-desktop.svg" alt="bg-pattern-intro-right-desktop" class="bg-pattern-intro-right-desktop">     <!--bg-pattern-intro-right-desktop-->      
                     <hr class="hr-wel">                                                              <!--intro main-->
                     <h1 class="intro-heading">                                                        <!--intro heading-->
                         Humanizing <br> your insurance.
@@ -49,6 +50,7 @@
                     <a href="#view-plans" class="intro-link">VIEW PLANS</a>                           <!--intro link-->     
                 </div>
                 <img class="bg-ptrn-intro-right" src="./content/images/bg-pattern-intro-right-mobile.svg" alt="bg-pattern-intro-right-mobile">   <!--intro bg pattren right-->
+                <img src="./content/images/bg-pattern-intro-left-desktop.svg" alt="bg-pattern-intro-left-desktop" class="bg-pattern-intro-left-desktop">    <!--bg-pattern-intro-left-desktop-->
             </div>
         </section>
         <section id="feachers">                       <!--features section-->
