--- a/index.html
+++ b/index.html
@@ -57,20 +57,22 @@
             <div class="main-feature">                <!--features main-->
                 <hr class="hr">
                 <h1 class="feature-heading">We’re different</h1>     <!--features heading-->
-                <div class="card">                                   <!--features card 1-->
-                    <img class="card-icon" src="./content/images/icon-snappy-process.svg" alt="icon-snappy-process">
-                    <h3 class="card-heading">Snappy Process</h3>
-                    <p class="card-text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
-                </div>
-                <div class="card">                                   <!--features card 2-->
-                    <img class="card-icon" src="./content/images/icon-affordable-prices.svg" alt="icon-snappy-process">
-                    <h3 class="card-heading">Affordable Prices</h3>
-                    <p class="card-text">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
-                </div>
-                <div class="card">                                   <!--features card 3-->
-                    <img class="card-icon" src="./content/images/icon-people-first.svg" alt="icon-snappy-process">
-                    <h3 class="card-heading">People First</h3>
-                    <p class="card-text">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+                <div class="card-main">
+                    <div class="card">                                   <!--features card 1-->
+                        <img class="card-icon" src="./content/images/icon-snappy-process.svg" alt="icon-snappy-process">
+                        <h3 class="card-heading">Snappy Process</h3>
+                        <p class="card-text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+                    </div>
+                    <div class="card">                                   <!--features card 2-->
+                        <img class="card-icon" src="./content/images/icon-affordable-prices.svg" alt="icon-snappy-process">
+                        <h3 class="card-heading">Affordable Prices</h3>
+                        <p class="card-text">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+                    </div>
+                    <div class="card">                                   <!--features card 3-->
+                        <img class="card-icon" src="./content/images/icon-people-first.svg" alt="icon-snappy-process">
+                        <h3 class="card-heading">People First</h3>
+                        <p class="card-text">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+                    </div>
                 </div>
             </div>
         </section>
