mobile screen contact section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
             </div>
         </section>
         <section id="contact">                        <!--contact section-->
+            <img src="./content/images/bg-pattern-footer-mobile.svg" alt="bg-pattern-footer-mobile" class="contact-bg-mobile">      <!--bg-pattern-footer-mobile-->
+            <img src="./content/images/bg-pattern-footer-desktop.svg" alt="bg-pattern-footer-desktop" class="contact-bg-desktop">    <!--bg-pattern-footer-desktop-->
             <div class="main-contact">                <!--contact section main-->
                 <img src="./content/images/logo.svg" alt="brand logo" class="brand-logo">       <!--contact section brand logo-->
                 <div class="contact-icon-main">                                                 <!--contact section contact icon-->
