complete mobile version

--- a/index.html
+++ b/index.html
@@ -98,26 +98,34 @@
             </div>
         </section>
         <section id="footer">                         <!--footer section-->
+            <hr class="footer-hr">
             <div class="footer-main">                 <!--footer section main-->
-                <hr class="footer-hr">
-                <a href="#Our-company" class="footer-link-1">OUR COMPANY</a>       <!--footer link-->
-                <a href="#how-we-work" class="footer-link-2">HOW WE WORK</a>
-                <a href="#Why-Insure?" class="footer-link-2">WHY INSURE?</a>
-                <a href="#check-price" class="footer-link-2">CHECK PRICE</a>
-                <a href="#Reviews" class="footer-link-2">REVIEWS</a>
-                <a href="#help-me" class="footer-link-1">HELP ME</a>
-                <a href="#faq" class="footer-link-2">FAQ</a>
-                <a href="#terms-of-use" class="footer-link-2">TERMS OF USE</a>
-                <a href="#privacy-policy" class="footer-link-2">PRIVACY POLICY</a>
-                <a href="#cookies" class="footer-link-2">COOKIES</a>
-                <a href="#contact" class="footer-link-1">CONTACT</a>
-                <a href="#sales" class="footer-link-2">SALES</a>
-                <a href="#support" class="footer-link-2">SUPPORT</a>
-                <a href="#live-chat" class="footer-link-2">LIVE CHAT</a>
-                <a href="#others" class="footer-link-1">OTHERS</a>
-                <a href="#careers" class="footer-link-2">CAREERS</a>
-                <a href="#press" class="footer-link-2">PRESS</a>
-                <a href="#licenses" class="footer-link-2">LICENSES</a>
+                <div class="footer-link">
+                    <a href="#Our-company" class="footer-link-1">OUR COMPANY</a>       <!--footer link-->
+                    <a href="#how-we-work" class="footer-link-2">HOW WE WORK</a>
+                    <a href="#Why-Insure?" class="footer-link-2">WHY INSURE?</a>
+                    <a href="#check-price" class="footer-link-2">CHECK PRICE</a>
+                    <a href="#Reviews" class="footer-link-2">REVIEWS</a>
+                </div>
+                <div class="footer-link">
+                    <a href="#help-me" class="footer-link-1">HELP ME</a>
+                    <a href="#faq" class="footer-link-2">FAQ</a>
+                    <a href="#terms-of-use" class="footer-link-2">TERMS OF USE</a>
+                    <a href="#privacy-policy" class="footer-link-2">PRIVACY POLICY</a>
+                    <a href="#cookies" class="footer-link-2">COOKIES</a>
+                </div>
+                <div class="footer-link">
+                    <a href="#contact" class="footer-link-1">CONTACT</a>
+                    <a href="#sales" class="footer-link-2">SALES</a>
+                    <a href="#support" class="footer-link-2">SUPPORT</a>
+                    <a href="#live-chat" class="footer-link-2">LIVE CHAT</a>
+                </div>
+                <div class="footer-link">
+                    <a href="#others" class="footer-link-1">OTHERS</a>
+                    <a href="#careers" class="footer-link-2">CAREERS</a>
+                    <a href="#press" class="footer-link-2">PRESS</a>
+                    <a href="#licenses" class="footer-link-2">LICENSES</a>
+                </div>
             </div>
         </section>
     </div>
