--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="active" href="#view-plans">VIEW PLANS</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
+                    <i id="icon" class="fa fa-bars"></i>
                 </a>
             </nav>    
         </section>
@@ -131,11 +131,15 @@
     </div>
     <script>   //navbar-toggle-button-js
         function myFunction() {
+          let icon = document.getElementById("icon");
+          console.log("icon", icon) 
           var x = document.getElementById("myLinks");
           if (x.style.display === "grid") {
             x.style.display = "none";
+            icon.className="fa fa-bars"
           } else {
             x.style.display = "grid";
+            icon.className="fa fa-xmark";
           }
         }
         </script>
